[gd_scene load_steps=3 format=3 uid="uid://34hd4idevgqb"]

[ext_resource type="Script" path="res://script/game_over_screen.gd" id="1_1enf6"]
[ext_resource type="Resource" uid="uid://cms5h73hluo1u" path="res://resource/default_game_state.tres" id="2_6fqb3"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1enf6")
game_state = ExtResource("2_6fqb3")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -29.0
offset_right = 43.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Game Over"

[node name="ScoreLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Score: 0"

[node name="HighscoreLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Highscore: 0"

[node name="RestartButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Restart"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBox/RestartButton" to="." method="_on_restart_button_pressed"]
